@@ -1,55 +1,57 @@
 package org.thoughtcrime.securesms.groups.ui.creategroup;
 
-import android.animation.ValueAnimator;
 import android.content.Context;
 import android.content.Intent;
 import android.os.Bundle;
-import android.util.Pair;
 import android.view.MenuItem;
+import android.view.View;
 
+import androidx.activity.result.ActivityResultLauncher;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.appcompat.app.AlertDialog;
 
-import com.annimon.stream.Stream;
 import com.google.android.material.button.MaterialButton;
-import com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton;
+import com.google.android.material.dialog.MaterialAlertDialogBuilder;
+import com.google.android.material.floatingactionbutton.FloatingActionButton;
 
+import org.signal.core.util.DimensionUnit;
+import org.signal.core.util.Stopwatch;
+import org.signal.core.util.concurrent.SimpleTask;
 import org.signal.core.util.logging.Log;
 import org.thoughtcrime.securesms.ContactSelectionActivity;
 import org.thoughtcrime.securesms.ContactSelectionListFragment;
 import org.thoughtcrime.securesms.R;
-import org.thoughtcrime.securesms.contacts.ContactsCursorLoader;
-import org.thoughtcrime.securesms.contacts.sync.DirectoryHelper;
-import org.thoughtcrime.securesms.database.RecipientDatabase;
-import org.thoughtcrime.securesms.groups.GroupsV2CapabilityChecker;
+import org.thoughtcrime.securesms.contacts.ContactSelectionDisplayMode;
+import org.thoughtcrime.securesms.contacts.sync.ContactDiscovery;
 import org.thoughtcrime.securesms.groups.ui.creategroup.details.AddGroupDetailsActivity;
 import org.thoughtcrime.securesms.keyvalue.SignalStore;
 import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.recipients.RecipientId;
+import org.thoughtcrime.securesms.recipients.RecipientRepository;
+import org.thoughtcrime.securesms.recipients.ui.findby.FindByActivity;
+import org.thoughtcrime.securesms.recipients.ui.findby.FindByMode;
 import org.thoughtcrime.securesms.util.FeatureFlags;
-import org.thoughtcrime.securesms.util.Stopwatch;
-import org.thoughtcrime.securesms.util.Util;
-import org.thoughtcrime.securesms.util.ViewUtil;
-import org.thoughtcrime.securesms.util.concurrent.SimpleTask;
 import org.thoughtcrime.securesms.util.views.SimpleProgressDialog;
-import org.whispersystems.libsignal.util.guava.Optional;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
-public class CreateGroupActivity extends ContactSelectionActivity {
+public class CreateGroupActivity extends ContactSelectionActivity implements ContactSelectionListFragment.FindByCallback {
 
   private static final String TAG = Log.tag(CreateGroupActivity.class);
 
   private static final short REQUEST_CODE_ADD_DETAILS = 17275;
 
-  private ExtendedFloatingActionButton next;
-  private ValueAnimator                padStart;
-  private ValueAnimator                padEnd;
+  private MaterialButton                     skip;
+  private FloatingActionButton               next;
+  private ActivityResultLauncher<FindByMode> findByActivityLauncher;
+
 
   public static Intent newIntent(@NonNull Context context) {
     Intent intent = new Intent(context, CreateGroupActivity.class);
@@ -57,11 +59,12 @@ public class CreateGroupActivity extends ContactSelectionActivity {
     intent.putExtra(ContactSelectionListFragment.REFRESHABLE, false);
     intent.putExtra(ContactSelectionActivity.EXTRA_LAYOUT_RES_ID, R.layout.create_group_activity);
 
-    int displayMode = Util.isDefaultSmsProvider(context) ? ContactsCursorLoader.DisplayMode.FLAG_SMS | ContactsCursorLoader.DisplayMode.FLAG_PUSH
-                                                         : ContactsCursorLoader.DisplayMode.FLAG_PUSH;
+    int displayMode = ContactSelectionDisplayMode.FLAG_PUSH;
 
     intent.putExtra(ContactSelectionListFragment.DISPLAY_MODE, displayMode);
     intent.putExtra(ContactSelectionListFragment.SELECTION_LIMITS, FeatureFlags.groupLimits().excludingSelf());
+    intent.putExtra(ContactSelectionListFragment.RV_PADDING_BOTTOM, (int) DimensionUnit.DP.toPixels(64f));
+    intent.putExtra(ContactSelectionListFragment.RV_CLIP, false);
 
     return intent;
   }
@@ -72,10 +75,18 @@ public class CreateGroupActivity extends ContactSelectionActivity {
     assert getSupportActionBar() != null;
     getSupportActionBar().setDisplayHomeAsUpEnabled(true);
 
+    skip = findViewById(R.id.skip);
     next = findViewById(R.id.next);
     extendSkip();
 
+    skip.setOnClickListener(v -> handleNextPressed());
     next.setOnClickListener(v -> handleNextPressed());
+
+    findByActivityLauncher = registerForActivityResult(new FindByActivity.Contract(), result -> {
+      if (result != null) {
+        contactsFragment.addRecipientToSelectionIfAble(result);
+      }
+    });
   }
 
   @Override
@@ -91,6 +102,7 @@ public class CreateGroupActivity extends ContactSelectionActivity {
   @Override
   protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent data) {
     if (requestCode == REQUEST_CODE_ADD_DETAILS && resultCode == RESULT_OK) {
+      setResult(RESULT_OK);
       finish();
     } else {
       super.onActivityResult(requestCode, resultCode, data);
@@ -98,18 +110,43 @@ public class CreateGroupActivity extends ContactSelectionActivity {
   }
 
   @Override
-  public void onBeforeContactSelected(Optional<RecipientId> recipientId, String number, Consumer<Boolean> callback) {
+  public void onBeforeContactSelected(boolean isFromUnknownSearchKey, @NonNull Optional<RecipientId> recipientId, String number, @NonNull Consumer<Boolean> callback) {
     if (contactsFragment.hasQueryFilter()) {
       getContactFilterView().clear();
     }
 
     shrinkSkip();
 
-    callback.accept(true);
+    if (recipientId.isPresent()) {
+      callback.accept(true);
+      return;
+    }
+
+    AlertDialog progress = SimpleProgressDialog.show(this);
+
+    SimpleTask.run(getLifecycle(), () -> RecipientRepository.lookupNewE164(this, number), result -> {
+      progress.dismiss();
+
+      if (result instanceof RecipientRepository.LookupResult.Success) {
+        callback.accept(true);
+      } else if (result instanceof RecipientRepository.LookupResult.NotFound || result instanceof RecipientRepository.LookupResult.InvalidEntry) {
+        new MaterialAlertDialogBuilder(this)
+            .setMessage(getString(R.string.NewConversationActivity__s_is_not_a_signal_user, number))
+            .setPositiveButton(android.R.string.ok, null)
+            .show();
+        callback.accept(false);
+      } else {
+        new MaterialAlertDialogBuilder(this)
+            .setMessage(R.string.NetworkFailure__network_error_check_your_connection_and_try_again)
+            .setPositiveButton(android.R.string.ok, null)
+            .show();
+        callback.accept(false);
+      }
+    });
   }
 
   @Override
-  public void onContactDeselected(Optional<RecipientId> recipientId, String number) {
+  public void onContactDeselected(@NonNull Optional<RecipientId> recipientId, String number) {
     if (contactsFragment.hasQueryFilter()) {
       getContactFilterView().clear();
     }
@@ -121,42 +158,33 @@ public class CreateGroupActivity extends ContactSelectionActivity {
 
   @Override
   public void onSelectionChanged() {
+    int selectedMembers = contactsFragment.getSelectedMembersSize();
     int selectedContactsCount = contactsFragment.getTotalMemberCount();
     if (selectedContactsCount == 0) {
       getToolbar().setTitle(getString(R.string.CreateGroupActivity__select_members));
     } else {
-      getToolbar().setTitle(getResources().getQuantityString(R.plurals.CreateGroupActivity__d_members, selectedContactsCount, selectedContactsCount));
+      getToolbar().setTitle(getResources().getQuantityString(R.plurals.CreateGroupActivity__d_members, selectedMembers, selectedMembers));
     }
   }
 
+  @Override
+  public void onFindByPhoneNumber() {
+    findByActivityLauncher.launch(FindByMode.PHONE_NUMBER);
+  }
+
+  @Override
+  public void onFindByUsername() {
+    findByActivityLauncher.launch(FindByMode.USERNAME);
+  }
+
   private void extendSkip() {
-    next.setIconGravity(MaterialButton.ICON_GRAVITY_END);
-    next.extend();
-    animatePadding(24, 18);
+    skip.setVisibility(View.VISIBLE);
+    next.setVisibility(View.GONE);
   }
 
   private void shrinkSkip() {
-    next.setIconGravity(MaterialButton.ICON_GRAVITY_START);
-    next.shrink();
-    animatePadding(16, 16);
-  }
-
-  private void animatePadding(int startDp, int endDp) {
-    if (padStart != null) padStart.cancel();
-
-    padStart = ValueAnimator.ofInt(next.getPaddingStart(), ViewUtil.dpToPx(startDp)).setDuration(200);
-    padStart.addUpdateListener(animation -> {
-      ViewUtil.setPaddingStart(next, (Integer) animation.getAnimatedValue());
-    });
-    padStart.start();
-
-    if (padEnd != null) padEnd.cancel();
-
-    padEnd = ValueAnimator.ofInt(next.getPaddingEnd(), ViewUtil.dpToPx(endDp)).setDuration(200);
-    padEnd.addUpdateListener(animation -> {
-      ViewUtil.setPaddingEnd(next, (Integer) animation.getAnimatedValue());
-    });
-    padEnd.start();
+    skip.setVisibility(View.GONE);
+    next.setVisibility(View.VISIBLE);
   }
 
   private void handleNextPressed() {
@@ -164,23 +192,24 @@ public class CreateGroupActivity extends ContactSelectionActivity {
     SimpleProgressDialog.DismissibleDialog dismissibleDialog = SimpleProgressDialog.showDelayed(this);
 
     SimpleTask.run(getLifecycle(), () -> {
-      List<RecipientId> ids = Stream.of(contactsFragment.getSelectedContacts())
-                                    .map(selectedContact -> selectedContact.getOrCreateRecipientId(this))
-                                    .toList();
+      List<RecipientId> ids = contactsFragment.getSelectedContacts()
+                                              .stream()
+                                              .map(selectedContact -> selectedContact.getOrCreateRecipientId(this))
+                                              .collect(Collectors.toList());
 
       List<Recipient> resolved = Recipient.resolvedList(ids);
 
       stopwatch.split("resolve");
 
-      List<Recipient> registeredChecks = Stream.of(resolved)
-                                               .filter(r -> r.getRegistered() == RecipientDatabase.RegisteredState.UNKNOWN)
-                                               .toList();
+      Set<Recipient> registeredChecks = resolved.stream()
+                                                .filter(r -> !r.isRegistered() || !r.getHasServiceId())
+                                                .collect(Collectors.toSet());
 
       Log.i(TAG, "Need to do " + registeredChecks.size() + " registration checks.");
 
       for (Recipient recipient : registeredChecks) {
         try {
-          DirectoryHelper.refreshDirectoryFor(this, recipient, false);
+          ContactDiscovery.refresh(this, recipient, false, TimeUnit.SECONDS.toMillis(10));
         } catch (IOException e) {
           Log.w(TAG, "Failed to refresh registered status for " + recipient.getId(), e);
         }
@@ -188,48 +217,21 @@ public class CreateGroupActivity extends ContactSelectionActivity {
 
       stopwatch.split("registered");
 
-      List<Recipient> recipientsAndSelf = new ArrayList<>(resolved);
-      recipientsAndSelf.add(Recipient.self().resolve());
-
-      if (!SignalStore.internalValues().gv2DoNotCreateGv2Groups()) {
-        try {
-          GroupsV2CapabilityChecker.refreshCapabilitiesIfNecessary(recipientsAndSelf);
-        } catch (IOException e) {
-          Log.w(TAG, "Failed to refresh all recipient capabilities.", e);
-        }
-      }
-
-      stopwatch.split("capabilities");
-
-      resolved = Recipient.resolvedList(ids);
-
-      Pair<Boolean, List<RecipientId>> result;
-
-      boolean gv2 = Stream.of(recipientsAndSelf).allMatch(r -> r.getGroupsV2Capability() == Recipient.Capability.SUPPORTED);
-      if (!gv2 && Stream.of(resolved).anyMatch(r -> !r.hasE164()))
-      {
-        Log.w(TAG, "Invalid GV1 group...");
-        ids = Collections.emptyList();
-        result = Pair.create(false, ids);
-      } else {
-        result = Pair.create(true, ids);
-      }
-
-      stopwatch.split("gv1-check");
-
-      return result;
-    }, result -> {
+      return Recipient.resolvedList(ids);
+    }, recipients -> {
       dismissibleDialog.dismiss();
-
       stopwatch.stop(TAG);
 
-      if (result.first) {
-        startActivityForResult(AddGroupDetailsActivity.newIntent(this, result.second), REQUEST_CODE_ADD_DETAILS);
+      List<Recipient> notRegistered = recipients.stream().filter(r -> !r.isRegistered() || !r.getHasServiceId()).collect(Collectors.toList());
+
+      if (notRegistered.isEmpty()) {
+        startActivityForResult(AddGroupDetailsActivity.newIntent(this, recipients.stream().map(Recipient::getId).collect(Collectors.toList())), REQUEST_CODE_ADD_DETAILS);
       } else {
-        new AlertDialog.Builder(this)
-                       .setMessage(R.string.CreateGroupActivity_some_contacts_cannot_be_in_legacy_groups)
-                       .setPositiveButton(android.R.string.ok, (d, w) -> d.dismiss())
-                       .show();
+        String notRegisteredNames = notRegistered.stream().map(r -> r.getDisplayName(this)).collect(Collectors.joining(", "));
+        new MaterialAlertDialogBuilder(this)
+            .setMessage(getResources().getQuantityString(R.plurals.CreateGroupActivity_not_signal_users, notRegistered.size(), notRegisteredNames))
+            .setPositiveButton(android.R.string.ok, null)
+            .show();
       }
     });
   }
